@@ -4,6 +4,7 @@ June 2010
 ================================================================================
 Add support for Glulx.
 Handle errors properly.
+Handle OPTIONS and send Access-Control headers for preflighted requests.
 
 February 2010
 ================================================================================
